--- a/announcement.yml
+++ b/announcement.yml
@@ -1,3 +1,3 @@
-type: info
+type: success
 msg: |
-  I hereby announce hook works.
+  **NOTICE:** This is jut an information notice, although succcessful one.
