--- a/announcement.yml
+++ b/announcement.yml
@@ -1,3 +1,3 @@
 type: success
 msg: |
-  **NOTICE:** This is jut an information notice, although succcessful one.
+  Welcome to Open OnDemand in CERIT-SC.
